# Ambrosia

./: .editorconfig  .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  README.rst  SECURITY.rst  debug.py  dev_book.ipynb  index.rst  pyproject.toml  setup.cfg
.github/workflows/: publish.yaml  test.yaml
ambrosia/: __init__.py  types.py  version.py
ambrosia/designer/: __init__.py  designer.py  handlers.py
ambrosia/preprocessing/: __init__.py  aggregate.py  cuped.py  ml_var_reducer.py  preprocessor.py  robust.py  transformers.py
ambrosia/spark_tools/: __init__.py  constants.py  empiric.py  split_tools.py  stat_criteria.py  stratification.py  theory.py
ambrosia/splitter/: __init__.py  handlers.py  splitter.py
ambrosia/tester/: __init__.py  binary_result_evaluation.py  handlers.py  tester.py
ambrosia/tools/: __init__.py  ab_abstract_component.py  back_tools.py  bin_intervals.py  configs.py  constants.py  decorators.py  empirical_tools.py  import_tools.py  knn.py  limit_distribution.py  log.py  names.py  pvalue_tools.py  split_tools.py  stat_criteria.py  stratification.py  theoretical_binary.py  theoretical_tools.py  tools.py  type_checks.py
ambrosia/tools/_lib/: _bin_ci_aide.py  _bootstrap_tools.py  _selection_aide.py  _tools_aide.py
ambrozia/: __init__.py
ambrozia/designer/: designer.py  handlers.py
ambrozia/preprocessing/: aggregate.py  cuped.py  ml_var_reducer.py  preprocessor.py  robust.py
ambrozia/spark_tools/: empiric.py  split_tools.py  stat_criteria.py  stratification.py  theory.py
ambrozia/splitter/: handlers.py  splitter.py
ambrozia/tester/: binary_result_evaluation.py  tester.py
ambrozia/tools/: ab_abstract_component.py  bin_intervals.py  empirical_tools.py  log.py  pvalue_tools.py  split_tools.py  stat_criteria.py  stratification.py  theoretical_tools.py  tools.py  type_checks.py
ambrozia/tools/_lib/: _bin_ci_aide.py  _bootstrap_tools.py  _tools_aide.py
docs/: requirements.txt
docs/source/: ab_cases.rst  ambrosia_nutshell.rst  authors.rst  conf.py  designer.rst  develop.rst  index.rst  installation.rst  nb_pandas_examples.rst  nb_spark_examples.rst  preprocessing.rst  security.rst  splitter.rst  tester.rst  tutorials.rst  usage.rst
docs/source/_static/css/: style.css
docs/source/ab_cases/: kion_ab.rst  matemarketing_workshop.html
docs/source/ambrosia_elements/: advanced_transformations.rst  aggregation.rst  designer.rst  preprocessing.rst  processor.rst  robust.rst  simple_transformation.rst  splitter.rst  tester.rst
docs/source/pandas_examples/: 00_preprocessing.nblink  01_vr_transformations.nblink  02_preprocessor.nblink  03_pandas_designer.nblink  04_binary_design.nblink  05_pandas_splitter.nblink  06_pandas_tester.nblink  10_synthetic_experiment_full_pipeline_short.nblink  11_cuped_example.nblink  design_binary.nblink  variance_reduction.nblink
docs/source/spark_examples/: 07_spark_designer.nblink  08_spark_splitter.nblink  09_spark_tester.nblink  spark_api.nblink
examples/: 00_preprocessing.ipynb  01_binary_design.ipynb  01_vr_transformations.ipynb  02_preprocessor.ipynb  03_pandas_designer.ipynb  04_binary_design.ipynb  04_spark_designer_example.ipynb  05_pandas_splitter.ipynb  06_pandas_splitter.ipynb  06_pandas_tester.ipynb  07_spark_designer.ipynb  08_spark_spliiter.ipynb  09_spark_tester.ipynb  10_synthetic_experiment_full_pipeline_short.ipynb  11_cuped_example.ipynb  1_usage_example_for_core_classes.ipynb  2_usage_example_variance_reduction.ipynb  3_usage_example_pipeline_preprocess.ipynb  4_usage_example_binary_design.ipynb  5_usage_example_full_pipeline.ipynb  6_spark_api_examples.ipynb  6_spark_designer_example.ipynb  test_installation.ipynb
examples/_examples_configs/: aggregator.json  boxcox_tranformer.json  cuped_config.json  designer_config.yaml  designer_config.yml  kion_cuped_params.json  params_cuped.json  preprocessor.json  robust.json  splitter_config.yaml
examples/examples_configs/: kion_cuped_params.json  multicuped_coef.json  params_cuped.json
tests/: config.yaml  conftest.py  test_aggregate.py  test_cuped.py  test_designer.py  test_ml_variance_reducer.py  test_preprocessor.py  test_robust.py  test_splitter.py  test_stratification.py  test_tester.py  test_transformers.py
tests/configs/: designer_config.yaml
tests/test_data/: ltv_retention.csv  nonlin_var_table.csv  pipeline_test.csv  result_ltv_ret_conv.csv  robust_moments.csv  splitter_dataframe.csv  stratification_data.csv  var_table.csv  watch_result.csv  watch_result_agg.csv  week_metrics.csv
